# match3

./: .gitignore  CMakeLists.txt  TODO  match3.c
samples/: CMakeLists.txt  board_builder.c  general.c
src/match3/: CMakeLists.txt  board.c  board.h  cell.c  cell.h  match.c  match.h  match3.c  match3.h  options.c  options.h  print.c  print.h  ref.h  state.c  state.h  swap.c  swap.h
tests/scenarios/: CMakeLists.txt  match_either_6_matched_scenario_test.c
tests/system/: CMakeLists.txt  board_are_identical.c  board_are_identical_system_test.c  save_and_load_system_test.c  state_load_from_hex_string_system_test.c
